fix(badges): align small orbit animation tilt with the new dashed ring and tune settings orbit size down to 240px

--- a/app/badges.css
+++ b/app/badges.css
@@ -551,8 +551,8 @@
   content: '';
   position: absolute;
   top: 50%; left: 50%;
-  width: 300px; height: 300px;
-  margin-top: -150px; margin-left: -150px;
+  width: 240px; height: 240px;
+  margin-top: -120px; margin-left: -120px;
   border: 1px dashed rgba(168, 85, 247, 0.5);
   border-radius: 50%;
   transform: rotateZ(-15deg) rotateX(70deg);
@@ -597,46 +597,46 @@
 
 @keyframes diagonal-orbit-3d {
   0% { 
-    transform: rotateZ(-15deg) rotateX(70deg) rotate(0deg) translateX(150px) rotate(0deg) rotateX(-70deg) rotateZ(15deg) scale(1) translateZ(50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(0deg) translateX(120px) rotate(0deg) rotateX(-70deg) rotateZ(15deg) scale(1) translateZ(50px); 
     z-index: 9999; filter: brightness(1);
   }
   25% { 
-    transform: rotateZ(-15deg) rotateX(70deg) rotate(90deg) translateX(150px) rotate(-90deg) rotateX(-70deg) rotateZ(15deg) scale(1.2) translateZ(50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(90deg) translateX(120px) rotate(-90deg) rotateX(-70deg) rotateZ(15deg) scale(1.2) translateZ(50px); 
     z-index: 9999; filter: brightness(1.2);
   }
   50% { 
-    transform: rotateZ(-15deg) rotateX(70deg) rotate(180deg) translateX(150px) rotate(-180deg) rotateX(-70deg) rotateZ(15deg) scale(0.8) translateZ(-50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(180deg) translateX(120px) rotate(-180deg) rotateX(-70deg) rotateZ(15deg) scale(0.8) translateZ(-50px); 
     z-index: -9999; filter: brightness(0.6);
   }
   75% { 
-    transform: rotateZ(-15deg) rotateX(70deg) rotate(270deg) translateX(150px) rotate(-270deg) rotateX(-70deg) rotateZ(15deg) scale(0.6) translateZ(-50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(270deg) translateX(120px) rotate(-270deg) rotateX(-70deg) rotateZ(15deg) scale(0.6) translateZ(-50px); 
     z-index: -9999; filter: brightness(0.4);
   }
   100% { 
-    transform: rotateZ(-15deg) rotateX(70deg) rotate(360deg) translateX(150px) rotate(-360deg) rotateX(-70deg) rotateZ(15deg) scale(1) translateZ(50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(360deg) translateX(120px) rotate(-360deg) rotateX(-70deg) rotateZ(15deg) scale(1) translateZ(50px); 
     z-index: 9999; filter: brightness(1);
   }
 }
 
 @keyframes diagonal-orbit-3d-small {
   0% { 
-    transform: rotateZ(-25deg) rotateX(55deg) rotate(0deg) translateX(55px) rotate(0deg) rotateX(-55deg) rotateZ(25deg) scale(1) translateZ(50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(0deg) translateX(55px) rotate(0deg) rotateX(-70deg) rotateZ(15deg) scale(1) translateZ(50px); 
     z-index: 9999; filter: brightness(1);
   }
   25% { 
-    transform: rotateZ(-25deg) rotateX(55deg) rotate(90deg) translateX(55px) rotate(-90deg) rotateX(-55deg) rotateZ(25deg) scale(1.2) translateZ(50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(90deg) translateX(55px) rotate(-90deg) rotateX(-70deg) rotateZ(15deg) scale(1.2) translateZ(50px); 
     z-index: 9999; filter: brightness(1.2);
   }
   50% { 
-    transform: rotateZ(-25deg) rotateX(55deg) rotate(180deg) translateX(55px) rotate(-180deg) rotateX(-55deg) rotateZ(25deg) scale(0.8) translateZ(-50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(180deg) translateX(55px) rotate(-180deg) rotateX(-70deg) rotateZ(15deg) scale(0.8) translateZ(-50px); 
     z-index: -9999; filter: brightness(0.6);
   }
   75% { 
-    transform: rotateZ(-25deg) rotateX(55deg) rotate(270deg) translateX(55px) rotate(-270deg) rotateX(-55deg) rotateZ(25deg) scale(0.6) translateZ(-50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(270deg) translateX(55px) rotate(-270deg) rotateX(-70deg) rotateZ(15deg) scale(0.6) translateZ(-50px); 
     z-index: -9999; filter: brightness(0.4);
   }
   100% { 
-    transform: rotateZ(-25deg) rotateX(55deg) rotate(360deg) translateX(55px) rotate(-360deg) rotateX(-55deg) rotateZ(25deg) scale(1) translateZ(50px); 
+    transform: rotateZ(-15deg) rotateX(70deg) rotate(360deg) translateX(55px) rotate(-360deg) rotateX(-70deg) rotateZ(15deg) scale(1) translateZ(50px); 
     z-index: 9999; filter: brightness(1);
   }
 }
